Fixed an alignment issue discovered in the image gallery when on safari browser viewing on smaller screen size.

--- a/styles/style.css
+++ b/styles/style.css
@@ -216,6 +216,8 @@ background-color: rgba(0, 0, 0, 0.498039)
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  /*the text-align below corrects an unkown responsive glitch on safari browser to align content properly*/
+  text-align: center;
 }
 
 /*Picture in ABOUT THE TRAIL PARAGRAPH*/
